reports/Large_Scale_Electrophysiology_and_Behavior.log
Traceback (most recent call last):
  File "/Users/VictorMagdaleno/opt/anaconda3/lib/python3.7/site-packages/jupyter_cache/executors/utils.py", line 56, in single_nb_execution
    record_timing=False,
  File "/Users/VictorMagdaleno/opt/anaconda3/lib/python3.7/site-packages/nbclient/client.py", line 1087, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/VictorMagdaleno/opt/anaconda3/lib/python3.7/site-packages/nbclient/util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/VictorMagdaleno/opt/anaconda3/lib/python3.7/site-packages/nbclient/util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "/Users/VictorMagdaleno/opt/anaconda3/lib/python3.7/asyncio/base_events.py", line 583, in run_until_complete
    return future.result()
  File "/Users/VictorMagdaleno/opt/anaconda3/lib/python3.7/site-packages/nbclient/client.py", line 541, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "/Users/VictorMagdaleno/opt/anaconda3/lib/python3.7/site-packages/nbclient/client.py", line 832, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/Users/VictorMagdaleno/opt/anaconda3/lib/python3.7/site-packages/nbclient/client.py", line 740, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply['content'])
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
bin_size = 5 
bin_stamps = np.arange(0,ts.max(),bin_size)
num_bins = len(bin_stamps)

run_bin = np.empty(num_bins)
response_bin = np.empty(num_bins)

for i in range(num_bins):
    
    # Get the values within our time bin and take a mean
    run_bin[i] = y[np.where([(ts>i*bin_size), (ts<(i+1)*bin_size)].mean() 
    response_bin[i] = dff_mean[np.where([(ts>i*bin_size), (ts<(i+1)*bin_size)].mean()
------------------

[0;36m  File [0;32m"<ipython-input-13-1ef7f4665be5>"[0;36m, line [0;32m12[0m
[0;31m    response_bin[i] = dff_mean[np.where([(ts>i*bin_size), (ts<(i+1)*bin_size)].mean()[0m
[0m               ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-13-1ef7f4665be5>, line 12)

